# tinyorganizer

./: .cproject  .hgignore  .project  CMakeLists.txt  Makefile  TinyOrganizer.doxyfile  TinyOrganizer.pro  schedulewidget.cpp  schedulewidget.h  tinyorganizer.cpp  tinyorganizer.h  tinyorganizer.qrc  tinyorganizer.ui
src/: CMakeLists.txt  TinyOrganizer.pro  aboutbox.cpp  aboutbox.h  aboutbox.ui  addevent.cpp  addevent.h  addevent.ui  addeventdialog.cpp  addeventdialog.h  addeventdialog.ui  eventtablemodel.cpp  eventtablemodel.h  launcher.cpp  launcher.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rsswidget.cpp  rsswidget.h  rsswidget.ui  schedulewidget.cpp  schedulewidget.h  schedulewidget.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  settingsmanager.cpp  settingsmanager.h  src.pro  tinyorganizer.cpp  tinyorganizer.h  tinyorganizer.qrc  tinyorganizer.ui
src/calendar-core/: event.cpp  event.h  eventmanager.cpp  eventmanager.h  eventstore.cpp  eventstore.h  recurrence.cpp  recurrence.h  reminder.cpp  reminder.h  singleton.h
src/i18n/: en_EN.qm  en_EN.ts  pl_PL.qm  pl_PL.ts
